# datacapture_challenge

./: README.md  example.py  pyproject.toml  requirements.txt
capture/data_capture/: main.py
capture/interfaces/: __init__.py  abc_datacapture.py  abc_statsbuilder.py
capture/stats_builder/: __init__.py  main.py
src/data_capture/: __init__.py  main.py
src/interfaces/: abc_datacapture.py  abc_statsbuilder.py
src/stats_builder/: main.py
tests/: conftest.py  test_data.py  timing_tools.py
tests/complexity/: complexity_test_data.py  test_complexity.py
tests/data_capture/: test_datacapture.py
tests/stats_builder/: test_data.py  test_statsbuilder.py
