[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datacapture"
version = "0.0.2"
description = "Captures data and build stats"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

[tool.hatch.build]
include = [
  "capture*",
  "tests*",
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["capture", "tests"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
log_level = "DEBUG"

[tool.black]
line-length = 110
